Fixes word wrap for long titles

--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -13,6 +13,7 @@
   font-size: 2rem;
   font-weight: 100;
   position: relative;
+  word-wrap: break-word;
 
   color: $color-organge-normal;
 }
